--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = "postgresql://emil:QCneTgMaCTnXk48gjVP8NA@testdb-9706.7tc.aws-eu-central-1.cockroachlabs.cloud:26257/testdb?sslmode=verify-full"
+DATABASE_URL = "postgresql://alfred:MqmNsVPTHoJ9OMX8J64gNg@testdb-9705.7tc.aws-eu-central-1.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full"
